Bezier curve width and twist fail to apply when more than 1 point is edited #35543

Closed
opened 2013-05-27 22:52:03 +02:00 by Fasit · 3 comments

%%%
Win7 64, nvidia 580

2.67a official

- Short description of error ---

When editing the width or twist of a bezier curve with bevel depth ; changes are either ignored or not applied correctly if the weight/twist values are varied on each point and the user tries to edit multiple points by overriding values entered through properties shelf.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

edit a bezier curve witth "full" fill mode and bevel depth.

select a point and give it a width or twist value from the properties shelf.

now select all the points an overide width/twist value.

if its the width value it seems it shrink the width.

if its twist value nothing happens.

while editing the twist value if the "value bar" is clicked and the dragged a bizzare thing happens an curve dissappears leaving only the points. And in th value bar something like a error value is shown "1.#O".

You can check the blend file and the the video on the attachments...

Video >>> https://www.dropbox.com/s/oz0tgpwjvwcvsky/blender_bug_report_beizercurve.avi

Cheers.

%%%

%%% Win7 64, nvidia 580 2.67a official - Short description of error --- When editing the width or twist of a bezier curve with bevel depth ; changes are either ignored or not applied correctly if the weight/twist values are varied on each point and the user tries to edit multiple points by overriding values entered through properties shelf. - Steps for others to reproduce the error (preferably based on attached .blend file) --- edit a bezier curve witth "full" fill mode and bevel depth. select a point and give it a width or twist value from the properties shelf. now select all the points an overide width/twist value. if its the width value it seems it shrink the width. if its twist value nothing happens. while editing the twist value if the "value bar" is clicked and the dragged a bizzare thing happens an curve dissappears leaving only the points. And in th value bar something like a error value is shown "1.#O". You can check the blend file and the the video on the attachments... Video >>> https://www.dropbox.com/s/oz0tgpwjvwcvsky/blender_bug_report_beizercurve.avi Cheers. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r57067.%%%

%%%fixed r57067.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35543
No description provided.