fix [#35543] Bezier curve width and twist fail to apply when more than 1 point is edited